--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -1,6 +1,6 @@
 <div style="background-color: #008000; width: 100%; height: 100%;">
   <h4 style="color:white;" class="bottomRow2">{{draw_hour}}:{{draw_minute}} {{am_or_pm}} &nbsp;&nbsp;{{remaining_minute}}:{{remaining_second}}&nbsp;&nbsp;&nbsp;{{current_date}}&nbsp;&nbsp;  &nbsp;{{current_hour}}:{{current_minute}}:{{current_second}}
-    <span  style="margin-right: 10px;">&nbsp;ID : {{userName}}&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : 0 &nbsp;&nbsp;</span></h4>
+    <span  style="margin-right: 10px;">&nbsp;ID : {{userName}}&nbsp;&nbsp;</span>&nbsp;<span>&nbsp;&nbsp;BALANCE : Rs. {{userBalance}}  &nbsp;&nbsp;</span></h4>
     <ion-grid style="height: 55%; width:100%;clear: both; margin-top: -10%">
     <ion-row>
       <ion-col style="text-align: center;" full no-margin no-padding>
