purchased history data done!!!

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -19,7 +19,7 @@
     
   </ion-button>
 <br>
-  <ion-button class="special-ion-button" expand='block'   color="primary" style="color:yellow;height:30px;" (click)="onPurchased()">
+  <ion-button class="special-ion-button" expand='block'   color="primary" style="color:yellow;height:30px;" (click)="onHistory()">
     <ion-icon name="filing"></ion-icon>&nbsp;Purchased History 
    
   </ion-button>
