--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -2,50 +2,53 @@
   <ion-button shape="round" color="tertiary" style="color:purple;height:30px; margin-left: 80%;" (click)="onExit()">
     <ion-icon name="exit"></ion-icon>Exit
   </ion-button>
-  <ion-card style="color:white;">
+  <ion-card style="background-color: white;color: black;">
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col>
-            Shree
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Shree</ion-label>
+            <div>
+              <ion-label>(1)</ion-label>
+            </div>
           </ion-col>
-          <ion-col>
-            Vashikaran
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label> Vashikaran</ion-label>
           </ion-col>
-          <ion-col>
-            Sudarashan
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Sudarashan</ion-label>
           </ion-col>
-          <ion-col>
-            Vastu
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Vastu</ion-label>
           </ion-col>
-          <ion-col>
-            Planet
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Planet</ion-label>
           </ion-col>
-         </ion-row>
+        </ion-row>
         <ion-row>
-          <ion-col>
-            Love
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Love</ion-label>
           </ion-col>
-          <ion-col>
-            Tara
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Tara</ion-label>
           </ion-col>
-          <ion-col>
-            Grah
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Grah</ion-label>
           </ion-col>
-          <ion-col>
-            Matsya
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Matsya</ion-label>
           </ion-col>
-          <ion-col>
-            Meditation
+          <ion-col class="ion-margin" style="align-items: center; text-align: center;">
+            <ion-label>Meditation</ion-label>
           </ion-col>
-         </ion-row>
-         </ion-grid>
-         <div>
-           Total Yantra:<br>
-           Total Amount:<br>
-           Date:<br>
-           Draw Time:<br>
-         </div>
+        </ion-row>
+      </ion-grid>
+      <div class="display">
+        Total Yantra:<br>
+        Total Amount:<br>
+        Date:<br>
+        Draw Time:<br>
+      </div>
     </ion-card-content>
   </ion-card>
 </div>
