--- a/src/app/double-jackpot/double-jackpot.page.html
+++ b/src/app/double-jackpot/double-jackpot.page.html
@@ -1,5 +1,5 @@
-<ion-content>
-<div style="background-color: #008000; width: 100%; height: 100%;">
+<ion-content color="honest">
+<!-- <div style="background-color: #008000; width: 100%; height: 100%;"> -->
   <ion-grid>
     
     <form [formGroup] = "angForm" (ngSubmit)="onSubmit()">
@@ -72,5 +72,5 @@
 </ion-col></ion-row>
 </form>  
 </ion-grid>
-</div>
+<!-- </div> -->
 </ion-content>
