--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -76,7 +76,7 @@
     </div>
     <div>
       <ion-button class="special-bottom-button" shape="round" color="danger" style="color:rgb(1.755, 38, 0);"
-        (click)="onpro()">
+        (click)="onClear()">
         <ion-icon name="nuclear"></ion-icon>Clear
       </ion-button>
     </div>
