--- a/src/app/program/program.page.html
+++ b/src/app/program/program.page.html
@@ -5,6 +5,7 @@
     <ion-row>
       <ion-col style="text-align: center;" full no-margin no-padding>
         <img src="assets/icon/1.jpeg" width="95%" height="75%" />
+        {{myObj.UserBalance}}
         <ion-input
           style="background-color: black; margin-left: 30%; width:40%; height:20px; border-radius: 30px; color: white;"
           type="number" [(ngModel)]="txt1"></ion-input>
