--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -149,8 +149,7 @@
       <div class="display">
         Total Yantra&nbsp;:&nbsp;{{item.CouponTotalNumber}}<br>
         Total Amount&nbsp;:&nbsp;{{item.CouponTotalAmount}}<br>
-        Purchased Date&nbsp;:&nbsp;{{item.CopuonCreateDate | date:'d-M-yyyy'}}<br>
-        Purchased Time&nbsp;:&nbsp;{{item.CopuonCreateTime | myPipe}} <br>
+        Purchased On&nbsp;:&nbsp;{{item.CopuonCreateDate | date:'d-M-yyyy'}} &nbsp; {{item.CopuonCreateTime | myPipe}}<br>
         Date&nbsp;:&nbsp;{{item.DrawDate | date:'d-M-yyyy'}}<br>
         Draw Time&nbsp;:&nbsp;{{item.DrawTime | myPipe}}<br>
         <!-- Winning Yantra:{{}}<br> -->
