--- a/src/app/purchased/purchased.page.html
+++ b/src/app/purchased/purchased.page.html
@@ -24,11 +24,11 @@
                 <!-- <img src="assets/icon/{{histories[i].YantraImage}}" style="height: 140px;" /> -->
                 <div  *ngIf="histories[i].DrawType==='Jackpot'"  >
                   <img src="assets/icon/jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase }}</ion-label>
                 </div>
                 <div  *ngIf="histories[i].DrawType==='3Jackpot'"  >
                   <img src="assets/icon/3jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i].DrawType==='Normal'"  >
                   <img src="assets/icon/{{histories[i].YantraImage}}" style="height: 140px;" />
@@ -49,11 +49,11 @@
                 <img src="assets/icon/{{histories[i+1].YantraImage}}"  *ngIf="histories[i+1].DrawType==='Normal'" style="height: 140px;" /> -->
                 <div  *ngIf="histories[i+1].DrawType==='Jackpot'"  >
                   <img src="assets/icon/jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+1].DrawType==='3Jackpot'"  >
                   <img src="assets/icon/3jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+1].DrawType==='Normal'"  >
                   <img src="assets/icon/{{histories[i+1].YantraImage}}" style="height: 140px;" />
@@ -69,11 +69,11 @@
                 <img src="assets/icon/{{histories[i+2].YantraImage}}"  *ngIf="histories[i+2].DrawType==='Normal'" style="height: 140px;" /> -->
                 <div  *ngIf="histories[i+2].DrawType==='Jackpot'"  >
                   <img src="assets/icon/jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+2].DrawType==='3Jackpot'"  >
                   <img src="assets/icon/3jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+2].DrawType==='Normal'"  >
                   <img src="assets/icon/{{histories[i+2].YantraImage}}" style="height: 140px;" />
@@ -90,11 +90,11 @@
                 <img src="assets/icon/{{histories[i+3].YantraImage}}"  *ngIf="histories[i+3].DrawType==='Normal'" style="height: 140px;" /> -->
                 <div  *ngIf="histories[i+3].DrawType==='Jackpot'"  >
                   <img src="assets/icon/jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+3].DrawType==='3Jackpot'"  >
                   <img src="assets/icon/3jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+3].DrawType==='Normal'"  >
                   <img src="assets/icon/{{histories[i+3].YantraImage}}" style="height: 140px;" />
@@ -111,11 +111,11 @@
                 <img src="assets/icon/{{histories[i+4].YantraImage}}"  *ngIf="histories[i+4].DrawType==='Normal'" style="height: 140px;" /> -->
                 <div  *ngIf="histories[i+4].DrawType==='Jackpot'"  >
                   <img src="assets/icon/jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+4].DrawType==='3Jackpot'"  >
                   <img src="assets/icon/3jp.png"style="height: 123px;" />
-                  <ion-label>{{item.YantraName}}</ion-label>
+                  <ion-label>{{item.YantraName | uppercase}}</ion-label>
                 </div>
                 <div  *ngIf="histories[i+4].DrawType==='Normal'"  >
                   <img src="assets/icon/{{histories[i+4].YantraImage}}" style="height: 140px;" />
