--- a/src/app/program/program.page.scss
+++ b/src/app/program/program.page.scss
@@ -37,6 +37,12 @@ img {
   // margin-left: -10px;
   // float:bottom;
 }
+.special-my-button{
+  height: 30px;
+}
+.my-span{
+  background-color: white !important;
+}
 .container {
   // margin-left:10px;
   font-size: 12px;
