some design changed

--- a/src/app/double-jackpot/double-jackpot.page.html
+++ b/src/app/double-jackpot/double-jackpot.page.html
@@ -66,8 +66,8 @@
   <ion-button class="special-bottom-button" shape="round" color="warning" style="color:black;" (click)="onSubmit()">
     <ion-icon name="checkbox-outline"></ion-icon>Submit
   </ion-button>
-  <ion-button class="special-bottom-button" shape="round" color="warning" style="color:black;" (click)="onExit()">
-    <ion-icon name="checkbox-outline"></ion-icon>Exit
+  <ion-button class="special-bottom-button" shape="round" color="tertiary" style="color:purple;" (click)="onExit()">
+    <ion-icon name="exit"></ion-icon>Cancel
   </ion-button>
 </ion-col></ion-row>
 </form>  
